--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -11,4 +11,6 @@ ext {
     androidxJunitVersion = '1.1.2'
     androidxEspressoCoreVersion = '3.3.0'
     cordovaAndroidVersion = '7.0.0'
+    androidx.exifinterface = ':exifinterface'
+    com.google.android.material = ':material'
 }
