--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@capacitor/android": "^3.4.3",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
